a lot of things
simple bootstrap layout; set up database; add home, login, register pages

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,11 @@
-{% extends 'base_index.html' %}
+{% extends 'base_forms.html' %}
 
 {% block content %}
-<div>Hello, {{ username }}</div>
+<main role="main" class="inner cover">
+    <h1 class="cover-heading">Простой туду лист</h1>
+    <p class="lead">Тут немножко не самого интересного текста, который нужен для того, чтобы вы его читали с очень задумчивым видом.</p>
+    <p class="lead">
+      <a href="{{ url_for('register') }}" class="btn btn-lg btn-secondary">Зарегистрироваться</a>
+    </p>
+  </main>
 {% endblock %}
