--- a/app/templates/boards.html
+++ b/app/templates/boards.html
@@ -1,4 +1,34 @@
 {% extends 'base_boards_tasks.html' %}
 
 {% block content %}
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card text-center bg-light">
+                <div class="card-body">
+                    <a href="#" class="btn btn-primary w-100 h-100">+ Add List</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">To-Do List 1</h5>
+                    <p class="card-text">Some description of the list.</p>
+                    <a href="#" class="btn btn-primary">View List</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">To-Do List 2</h5>
+                    <p class="card-text">Some description of the list.</p>
+                    <a href="#" class="btn btn-primary">View List</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
