--- a/app/templates/todolist.html
+++ b/app/templates/todolist.html
@@ -1,4 +1,6 @@
-{% extends 'base_boards_tasks.html' %}
+{% extends 'base_intro.html' %}
 
 {% block content %}
+<h1>{{ username }}</h1>
+<h2>{{ board_id }} - {{ board_title }}</h2>
 {% endblock %}
