--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h1>Register</h1>
-    <form action='' method="post" novalidate>
+    <form action='' method="post">
         {{ form.hidden_tag() }}
         <div class="form-group">
             {{ form.username.label }}
