--- a/app/templates/todolist.html
+++ b/app/templates/todolist.html
@@ -1,6 +1,29 @@
 {% extends 'base_intro.html' %}
 
 {% block content %}
+<script src="{{ url_for('static', filename='js/Sortable.min.js') }}"></script>
 <h1>{{ username }}</h1>
 <h2>{{ board_id }} - {{ board_title }}</h2>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Task List</h2>
+    <ul id="task-list" class="list-group">
+        <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="1" data-position="0">
+            Task 1
+            <span class="badge bg-primary rounded-pill">Position 0</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="2" data-position="1">
+            Task 2
+            <span class="badge bg-primary rounded-pill">Position 1</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="3" data-position="2">
+            Task 3
+            <span class="badge bg-primary rounded-pill">Position 2</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="4" data-position="3">
+            Task 4
+            <span class="badge bg-primary rounded-pill">Position 3</span>
+        </li>
+    </ul>
+</div>
+<script scr="{{ url_for('static', filename='js/todolist.js') }}"></script>
 {% endblock %}
