drag and drop bug fix

--- a/app/templates/base_intro.html
+++ b/app/templates/base_intro.html
@@ -34,5 +34,6 @@
         <footer class="mastfoot mt-auto">
         </footer>
     </div>
+    <script scr="{{ url_for('static', filename='js/todolist.js') }}"></script>
 </body>
 </html>
