--- a/app/templates/todolist.html
+++ b/app/templates/todolist.html
@@ -4,24 +4,29 @@
 <h1>{{ username }}</h1>
 <h2>{{ board_id }} - {{ board_title }}</h2>
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Task List</h2>
+    <form method="post" action="">
+        {{ add_task_form.hidden_tag() }}
+        <div class="form-group">
+            {{ add_task_form.title.label }}
+            {{ add_task_form.title(class="form-control", size=40) }}
+            {% for error in add_task_form.title.errors %}
+            <span class="text-danger">[{{ error }}]</span>
+            {% endfor %}
+            <div class="form-group">
+                {{ add_task_form.submit(class="btn btn-primary") }}
+            </div>
+        </div>
+    </form>
     <ul id="task-list" class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="1" data-position="0">
-            Task 1
-            <span class="badge bg-primary rounded-pill">Position 0</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="2" data-position="1">
-            Task 2
-            <span class="badge bg-primary rounded-pill">Position 1</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="3" data-position="2">
-            Task 3
-            <span class="badge bg-primary rounded-pill">Position 2</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="4" data-position="3">
-            Task 4
-            <span class="badge bg-primary rounded-pill">Position 3</span>
-        </li>
+        {% for task in tasks %}
+            <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="1" data-position="0">
+                {{ task['title'] }}
+                    <form class="badge bg-primary rounded-pill" method="post", action="{{ url_for('delete_task', task_id=task['id']) }}">
+                        {{ delete_task_form.hidden_tag() }}
+                        {{ delete_task_form.submit() }}
+                    </form>
+            </li>
+        {% endfor %}
     </ul>
 </div>
 <script src="{{ url_for('static', filename='js/Sortable.min.js') }}"></script>
