--- a/app/templates/boards.html
+++ b/app/templates/boards.html
@@ -48,4 +48,5 @@
         {% endfor %}
     </div>
 </div>
+<script src="{{ url_for('static', filename='js/edit_board.js') }}"></script>
 {% endblock %}
