--- a/app/templates/base_intro.html
+++ b/app/templates/base_intro.html
@@ -4,30 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
-    <title>Eptel – {{ title }}</title>
+    <title>EpTodo – {{ title }}</title>
     {% else %}
-    <title>Eptel – ToDo</title>
+    <title>EpTodo – todo</title>
     {% endif %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
 <body>
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-        <header class="masthead mb-auto">
-          <div class="inner">
-            <h3 class="masthead-brand">Eptel</h3>
-            <nav class="nav nav-masthead justify-content-center">
-              <a class="nav-link active" href="{{ url_for('index') }}">Home</a>
-              {% if current_user.is_anonymous %}
-              <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-              <a class="nav-link" href="{{ url_for('register') }}">Register</a>
-              {% else %}
-              <a class="nav-link" href="{{ url_for('boards', username=current_user.username) }}">Boards</a>
-              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-              {% endif %}
-            </nav>
+  <div class="cover-container d-flex h-100 p-1 mx-auto flex-column container-sm">
+    <header class="masthead mb-auto">
+      <div class="inner">
+        <div class="container d-flex justify-content-between align-items-center">
+          <div class="d-flex align-items-center">
+            <img src="{{ url_for('static', filename='src/logo_white.svg') }}" alt="Logo" class="img-fluid" style="height: 40px;">
+            <h3 class="masthead-brand ms-3 mb-0">EpTodo</h3>
           </div>
-        </header>
+          <nav class="nav nav-masthead">
+            <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+            {% if current_user.is_anonymous %}
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+            {% else %}
+            <a class="nav-link" href="{{ url_for('boards', username=current_user.username) }}">Boards</a>
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            {% endif %}
+          </nav>
+        </div>
+      </div>
+    </header>
 
         {% block content %}{% endblock %}
   
