--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -27,7 +27,8 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  /*background-color: #333;*/
+  background-color: #183531;
 }
 
 body {
@@ -46,6 +47,11 @@ body {
   min-width: 25em;
 }
 
+#login-form,
+#reg-form {
+  min-height: 45vh;
+}
+
 
 /*
  * Header
@@ -61,14 +67,14 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(255, 255, 255, .8);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: rgba(255, 255, 255, .5);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -137,4 +143,17 @@ body {
 
 .task-done {
   background: url('../src/done_black.svg') no-repeat center;
+}
+
+.form-container {
+  padding-top: 20vh;
+  min-height: 80vh;
+}
+
+.board {
+  margin: 5px 0 5px 0;
+}
+
+.lane {
+  top: 15vh;
 }
