--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,31 +1,34 @@
 {% extends 'base_intro.html' %}
 
 {% block content %}
-<div class="container">
-    <h1>Login</h1>
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <div class="form-group">
-            {{ form.username.label }}
-            {{ form.username(class="form-control") }}
-            {% for error in form.username.errors %}
-            <span class="text-danger">[{{ error }}]</span>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.password.label }}
-            {{ form.password(class="form-control") }}
-            {% for error in form.password.errors %}
-            <span class="text-danger">[{{ error }}]</span>
-            {% endfor %}
-        </div>
-        <div class="form-group"></div>
-            {{ form.remember_me(class="btn btn-primary") }}
-        </div>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-primary") }}
-        </div>
-    </form>
-    <p class="lead">New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+<div class="row justify-content-center" id="login-form">
+    <div class="col-md-6">
+        <h1>Login</h1>
+        <form action="" method="post">
+            {{ form.hidden_tag() }}
+            <div class="form-group">
+                {{ form.username.label }}
+                {{ form.username(class="form-control w-55") }}
+                {% for error in form.username.errors %}
+                <span class="text-danger">[{{ error }}]</span>
+                {% endfor %}
+            </div>
+            <div class="form-group">
+                {{ form.password.label }}
+                {{ form.password(class="form-control w-55") }}
+                {% for error in form.password.errors %}
+                <span class="text-danger">[{{ error }}]</span>
+                {% endfor %}
+            </div>
+            <div class="form-group">
+                {{ form.remember_me(class="btn btn-primary") }}
+                {{ form.remember_me.label }}
+            </div>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-primary") }}
+            </div>
+        </form>
+        <p class="lead">New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+    </div>
 </div>
 {% endblock %}
