--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,41 +1,43 @@
 {% extends 'base_intro.html' %}
 
 {% block content %}
-<div class="container">
-    <h1>Register</h1>
-    <form action='' method="post">
-        {{ form.hidden_tag() }}
-        <div class="form-group">
-            {{ form.username.label }}
-            {{ form.username(class="form-control") }}
-            {% for error in form.username.errors %}
-            <span class="text-danger">[{{ error }}]</span>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.email.label }}
-            {{ form.email(class="form-control") }}
-            {% for error in form.email.errors %}
-            <span class="text-danger">[{{ error }}]</span>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.password.label }}
-            {{ form.password(class="form-control") }}
-            {% for error in form.password.errors %}
-            <span class="text-danger">[{{ error }}]</span>
-            {% endfor %}
-        </div>
-        <div class="form-group"></div>
-            {{ form.password2.label }}
-            {{ form.password2(class="form-control") }}
-            {% for error in form.password2.errors %}
-            <span class="text-danger">[{{ error }}]</span>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-primary") }}
-        </div>
-    </form>
+<div class="row justify-content-center" id="reg-form">
+    <div class="col-md-6">
+        <h1>Registration</h1>
+        <form action='' method="post">
+            {{ form.hidden_tag() }}
+            <div class="form-group">
+                {{ form.username.label }}
+                {{ form.username(class="form-control w-55") }}
+                {% for error in form.username.errors %}
+                <span class="text-danger">[{{ error }}]</span>
+                {% endfor %}
+            </div>
+            <div class="form-group">
+                {{ form.email.label }}
+                {{ form.email(class="form-control w-55") }}
+                {% for error in form.email.errors %}
+                <span class="text-danger">[{{ error }}]</span>
+                {% endfor %}
+            </div>
+            <div class="form-group">
+                {{ form.password.label }}
+                {{ form.password(class="form-control w-55") }}
+                {% for error in form.password.errors %}
+                <span class="text-danger">[{{ error }}]</span>
+                {% endfor %}
+            </div>
+            <div class="form-group">
+                {{ form.password2.label }}
+                {{ form.password2(class="form-control w-55") }}
+                {% for error in form.password2.errors %}
+                <span class="text-danger">[{{ error }}]</span>
+                {% endfor %}
+            </div>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-primary") }}
+            </div>
+        </form>
+    </div>
 </div>
 {% endblock %}
