--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -133,10 +133,6 @@ body {
   background: url('../src/delete_icon.svg') no-repeat left center;
 }
 
-.edit-board {
-  background: url('../src/edit_icon.svg') no-repeat left center;
-}
-
 .add-task {
   background: url('../src/add_black.svg') no-repeat left center;
 }
@@ -151,9 +147,20 @@ body {
 }
 
 .board {
-  margin: 5px 0 5px 0;
+  margin: 5px 0 7px 0;
 }
 
 .lane {
-  top: 15vh;
+  padding-top: 20vh;
+  min-height: 80vh;
+}
+
+h5.card-title:hover {
+  text-decoration: underline;
+  text-decoration-color: rgba(0, 0, 0, .5);
+  text-decoration-thickness: 0.22rem;
+}
+
+.add-task-form {
+  margin: 5px 0 15px 0;
 }
