--- a/app/templates/boards.html
+++ b/app/templates/boards.html
@@ -32,11 +32,6 @@
                         {{ open_board_form.submit() }}
                     </form>
 
-                    <form method="post" action="">
-                        {{ edit_board_form.hidden_tag() }}
-                        {{ edit_board_form.submit() }}
-                    </form>
-
                     <form method="post" action="{{ url_for('delete_board', board_id=board['id']) }}">
                         {{ delete_board_form.hidden_tag() }}
                         {{ delete_board_form.submit() }}
@@ -48,5 +43,6 @@
         {% endfor %}
     </div>
 </div>
+<script src="{{ url_for('static', filename='js/jquery-3.7.1.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/edit_board.js') }}"></script>
 {% endblock %}
