--- a/app/templates/todolist.html
+++ b/app/templates/todolist.html
@@ -3,30 +3,34 @@
 {% block content %}
 <div class="container-fluid mt-5">
     <h1>{{ username }} — {{ board_title }}</h1>
-    <form method="post" action="">
-        {{ add_task_form.hidden_tag() }}
-        <div class="form-group">
-            {{ add_task_form.title.label }}
-            {{ add_task_form.title(class="form-control w-45") }}
-            {% for error in add_task_form.title.errors %}
-            <span class="text-danger">[{{ error }}]</span>
-            {% endfor %}
-            <div class="form-group">
-                {{ add_task_form.submit(class="btn btn-primary") }}
+    <div class="d-flex add-task-form">
+        <form method="post" action="">
+            {{ add_task_form.hidden_tag() }}
+            <div class="form-group d-flex ">
+                {{ add_task_form.title.label }}
+                {{ add_task_form.title(class="form-control w-45", placeholder="Enter your task here") }}
+                {% for error in add_task_form.title.errors %}
+                <span class="text-danger">[{{ error }}]</span>
+                {% endfor %}
+                <div class="form-group">
+                    {{ add_task_form.submit(class="btn btn-primary") }}
+                </div>
             </div>
-        </div>
-    </form>
-    <ul id="task-list" class="list-group col">
-        {% for task in tasks %}
-            <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="{{ task['id'] }}">
-                <p class="sort-task">{{ task['title'] }}</p>
-                    <form class="" method="post", action="{{ url_for('delete_task', task_id=task['id']) }}">
-                        {{ delete_task_form.hidden_tag() }}
-                        {{ delete_task_form.submit() }}
-                    </form>
-            </li>
-        {% endfor %}
-    </ul>
+        </form>
+    </div>
+    <div>
+        <ul id="task-list" class="list-group col">
+            {% for task in tasks %}
+                <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="{{ task['id'] }}">
+                    <div class="sort-task">{{ task['title'] }}</div>
+                        <form class="" method="post", action="{{ url_for('delete_task', task_id=task['id']) }}">
+                            {{ delete_task_form.hidden_tag() }}
+                            {{ delete_task_form.submit() }}
+                        </form>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
 </div>
 <script src="{{ url_for('static', filename='js/jquery-3.7.1.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/Sortable.min.js') }}"></script>
