--- a/app/templates/errors/base_error.html
+++ b/app/templates/errors/base_error.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, 
+									initial-scale=1.0" />
+	<title>404 Error</title>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+	<style>
+		body,
+		html {
+			height: 100%;
+		}
+	</style>
 </head>
-<body>
-    {% block content %}{% endblock %}
+
+<body class="d-flex justify-content-center 
+				align-items-center">
+	<div class="col-md-12 text-center">
+		<h1>404</h1>
+		<h2>Page Not Found</h2>
+		<p>
+			Sorry, the page you are looking
+			for does not exist.
+		</p>
+	</div>
 </body>
+
 </html>
