--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -28,7 +28,7 @@
                 {{ form.submit(class="btn btn-primary") }}
             </div>
         </form>
-        <p class="lead">New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+        <p class="lead">New User? <a href="{{ url_for('auth.register') }}">Click to Register!</a></p>
     </div>
 </div>
 {% endblock %}
