--- a/app/templates/base_intro.html
+++ b/app/templates/base_intro.html
@@ -21,13 +21,13 @@
             <h3 class="masthead-brand ms-3 mb-0">EpTodo</h3>
           </div>
           <nav class="nav nav-masthead">
-            <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+            <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
             {% if current_user.is_anonymous %}
-            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+            <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
+            <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
             {% else %}
-            <a class="nav-link" href="{{ url_for('boards', username=current_user.username) }}">Boards</a>
-            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            <a class="nav-link" href="{{ url_for('boards.boards', username=current_user.username) }}">Boards</a>
+            <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
             {% endif %}
           </nav>
         </div>
