--- a/app/templates/tasks/todolist.html
+++ b/app/templates/tasks/todolist.html
@@ -21,11 +21,14 @@
         <ul id="task-list" class="list-group col-md-10">
             {% for task in tasks %}
                 <li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="{{ task['id'] }}">
-                    <div class="sort-task">{{ task['title'] }}</div>
-                        <form class="" method="post", action="{{ url_for('tasks.delete_task', task_id=task['id']) }}">
-                            {{ delete_task_form.hidden_tag() }}
-                            {{ delete_task_form.submit() }}
-                        </form>
+                    <div class="handle pr-3">
+                        <img src="{{ url_for('static', filename='src/drag_handle_black.svg') }}">
+                    </div>
+                    <div class="sort-task ps-3">{{ task['title'] }}</div>
+                    <form class="ms-auto ps-3" method="post", action="{{ url_for('tasks.delete_task', task_id=task['id']) }}">
+                        {{ delete_task_form.hidden_tag() }}
+                        {{ delete_task_form.submit() }}
+                    </form>
                 </li>
             {% endfor %}
         </ul>
